重命名 transitions 为 tfsm，更新相关配置和文档

--- a/examples/Graph MIxin Demo Nested.ipynb
+++ b/examples/Graph MIxin Demo Nested.ipynb
@@ -17,8 +17,8 @@
     "if cmd_folder not in sys.path:\n",
     "    sys.path.insert(0, cmd_folder)\n",
     "\n",
-    "from transitions.extensions.states import Timeout, Tags, add_state_features\n",
-    "from transitions.extensions.factory import HierarchicalGraphMachine as Machine\n",
+    "from tfsm.extensions.states import Timeout, Tags, add_state_features\n",
+    "from tfsm.extensions.factory import HierarchicalGraphMachine as Machine\n",
     "from IPython.display import Image, display, display_png\n",
     "\n",
     "@add_state_features(Timeout, Tags)\n",
@@ -65,7 +65,7 @@
    ],
    "source": [
     "states = [{'name': 'caffeinated', 'on_enter': 'do_x',\n",
-    "           'children':['dithering', 'running'], 'transitions': [['drink', 'dithering', '=']]},\n",
+    "           'children':['dithering', 'running'], 'tfsm': [['drink', 'dithering', '=']]},\n",
     "          {'name': 'standing', 'on_enter': ['do_x', 'do_y'], 'on_exit': 'do_z'},\n",
     "          {'name': 'walking', 'tags': ['accepted', 'pending'], 'timeout': 5, 'on_timeout': 'do_z'},\n",
     "          \n",
