--- a/examples/Graph MIxin Demo.ipynb
+++ b/examples/Graph MIxin Demo.ipynb
@@ -35,8 +35,8 @@
     "if cmd_folder not in sys.path:\n",
     "    sys.path.insert(0, cmd_folder)\n",
     "    \n",
-    "from transitions import *\n",
-    "from transitions.extensions import GraphMachine\n",
+    "from tfsm import *\n",
+    "from tfsm.extensions import GraphMachine\n",
     "from IPython.display import Image, display, display_png\n",
     "\n",
     "\n",
@@ -143,7 +143,7 @@
     }
    ],
    "source": [
-    "machine.auto_transitions_markup = False # hide auto transitions\n",
+    "machine.auto_transitions_markup = False # hide auto tfsm\n",
     "model.show_graph(force_new=True) # rerender graph"
    ]
   },
@@ -326,7 +326,7 @@
     }
    ],
    "source": [
-    "from transitions.extensions.states import Timeout, Tags, add_state_features\n",
+    "from tfsm.extensions.states import Timeout, Tags, add_state_features\n",
     "\n",
     "@add_state_features(Timeout, Tags)\n",
     "class CustomMachine(GraphMachine):\n",
@@ -500,7 +500,7 @@
     }
    ],
    "source": [
-    "from transitions.extensions.diagrams import GraphMachine\n",
+    "from tfsm.extensions.diagrams import GraphMachine\n",
     "\n",
     "states = ['A', 'B', 'C', 'D']\n",
     "state_translations = {\n",
