--- a/examples/Playground.ipynb
+++ b/examples/Playground.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transitions import Machine\n",
+    "from tfsm import Machine\n",
     "import random\n",
     "\n",
     "class NarcolepticSuperhero(object):\n",
@@ -33,7 +33,7 @@
     "    # Define some states. Most of the time, narcoleptic superheroes are just like\n",
     "    # everyone else. Except for...\n",
     "    states = ['asleep', 'hanging out', 'hungry', 'sweaty', 'saving the world']\n",
-    "    # A more compact version of the quickstart transitions\n",
+    "    # A more compact version of the quickstart tfsm\n",
     "    transitions = [['wakeup', 'asleep', 'hanging out'],\n",
     "                   ['work_out',  'hanging out', 'hungry'],\n",
     "                   ['eat', 'hungry', 'hanging out'],\n",
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transitions.extensions import HierarchicalMachine as Machine\n",
+    "from tfsm.extensions import HierarchicalMachine as Machine\n",
     "\n",
     "states = ['standing', 'walking', {'name': 'caffeinated', 'children':['dithering', 'running']}]\n",
     "transitions = [\n",
@@ -122,7 +122,7 @@
    },
    "outputs": [],
    "source": [
-    "from transitions.extensions.asyncio import AsyncMachine\n",
+    "from tfsm.extensions.asyncio import AsyncMachine\n",
     "import asyncio\n",
     "\n",
     "class Dancer:\n",
@@ -170,8 +170,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transitions.extensions.states import Timeout, Tags, add_state_features\n",
-    "from transitions.extensions.diagrams import GraphMachine\n",
+    "from tfsm.extensions.states import Timeout, Tags, add_state_features\n",
+    "from tfsm.extensions.diagrams import GraphMachine\n",
     "\n",
     "import io\n",
     "from IPython.display import Image, display, display_png\n",
